Fixed code blocks not highlighting and changed font for them. Rewrite the first blog and add an empty secend blog.

--- a/content/post/1.md
+++ b/content/post/1.md
@@ -4,7 +4,23 @@ date = 2024-02-13T16:34:38+08:00
 draft = false
 +++
 
+
 ## Introduction
+
+Hello, everyone! My name's Spixed, and this is my first blog. 
+
+I tried to create a blog and succeeded before, but at that time I make it just for fun. Thus I didn't write any posts and I have no individual. 
+
+But now it's different. I want to make a blog to record my coding life and my senior high life. I'll write passages and post on this blog from time to time. I plan to make a detailed introduction about my teachers COZ they have plenty of *fun habits* (/doge). **This introduction may be completed when I finish senior high.**
+
+Anyway, I'm a Chinese student, so I try to use both Chinese and English to write my blogs. But if I just use Chinese or English, please forgive me. **And if there're some grammar errors please write a comment to tell me.**
+>Well, I don't want to write *Chinese* for this passage because I need to study as soon as possible ... (っ °Д °;)っ
+
+That's all. Thank you for reading. 
+
+
+## Examples(Testing)
+> After a lot of hard work, in dense documentation, in messy directory structure, and without any comments, I managed to fix this bug. 🥳
 
 ```cpp
 #include <iostream>
@@ -12,9 +28,13 @@ using namespace std;
 
 int main() {
     string name;
+    int year;
+
     printf("Type your name here: ")
     getline(cin, name);
-    printf("Hello, %s", name);
+    printf("Hello, %s! \nWhat year were you born? ", name);
+    getline(cin, year);
+    printf("So in this year you are %d years old. Congratulations! ", 2024 - year);
 
     return 0;
 }
