--- a/content/post/1.md
+++ b/content/post/1.md
@@ -2,6 +2,7 @@
 title = 'My First Blog'
 date = 2024-02-13T16:34:38+08:00
 draft = false
+weight = 0
 +++
 
 > Brief Summary: Self introduction, my past as a blogger, purposes and reasons for creating this blog, my self-requirements about writing blogs, and a test about coding blocks. 
