some messy changes

--- a/content/post/zh-cn/1.md
+++ b/content/post/zh-cn/1.md
@@ -7,6 +7,7 @@ weight = 0
 
 > Brief Summary: Self introduction, my past as a blogger, purposes and reasons for creating this blog, my self-requirements about writing blogs, and a test about coding blocks. 
 
+<!--more-->
 
 ## Introduction
 
