feat: 更新.gitignore文件以添加工具和AI代理文件夹，修改hugo.toml以移除右上角关于页面的按钮，更新文章以包含作者和精选标记，添加QQ表情转换工具的功能改进，删除不再需要的文件，更新主题子项目提交ID。

--- a/content/post/1.en.md
+++ b/content/post/1.en.md
@@ -2,6 +2,8 @@
 title = 'My First Blog'
 date = 2024-02-13T16:34:38+08:00
 draft = false
+author = "spixed"
+featured = true
 weight = 0
 +++
 
@@ -47,4 +49,4 @@ int main() {
 }
 ```
 
-> And honestly I barely write English version fully by myself -- usually I write Chinese version and then I let DeepSeek to translate it into English. And this quote is written by myself. 
+> And honestly I barely write English version fully by myself -- usually I write Chinese version and then I let DeepSeek to translate it into English. And this quote is written by myself.
