--- a/content/post/hetx/1.en.md
+++ b/content/post/hetx/1.en.md
@@ -1,11 +1,21 @@
 +++
-title = 'Test 1'
+title = 'Test'
 date = 2025-07-30T08:00:00+08:00
-draft = true
+draft = false
+author = "hetx"
+featured = true
 keywords = ["test"]
 categories = ["test"]
 tags = ["test"]
 weight = 0
 +++
 
-This is Hetx's exclusive article folder test English document 1
+This is Hetx's exclusive article folder test English document.
+
+那些让痛苦转移到自己身上的人，其实只是用着最拙劣的方法帮助他人
+
+可是世上没有绝对，哪一条路不会面临失败和怀疑，倘若一次跌倒就让人失去前行的勇气，那么你将面临着"曾在无数条路上涉足，却无法抵达终点"的事实
+
+所以，不要怀疑自己，因为你放下现在也会失败{{< qq-emoji "托腮" >}}
+
+请如蜡烛般，将点亮你的那双充满希望的双眸铭记
