feat: 更新主题、增加启用评论系统配置项并新增博客文章
- 更新主题相关配置和构建指南
- 增加启用 Waline 评论系统配置项
- 新增中英文双语文章《一环》(Closing the Loop)
- 更新《学校介绍》文章，补充高三作息和事件详情
- 更新《构建过程》文章，重写主题搭建教程
- 优化作者信息结构，将 bio 字段合并
- 将首篇博客的 featured 状态设为 false 并更新内容

--- a/content/zh/post/1.md
+++ b/content/zh/post/1.md
@@ -3,7 +3,7 @@ title: 我的第一篇博客
 date: 2024-02-13 16:34:38+08:00
 draft: false
 author: spixed
-featured: true
+featured: false
 categories: []
 tags: []
 description: ''
@@ -21,17 +21,16 @@ weight: 0
 
 我之前尝试过创建博客并且成功了，但那时我只是为了好玩。因此我没有写任何文章，也没有个人特色。
 
-但现在不同了。我想做一个博客来记录我的编程生活和高中生活。我会不时在这个博客上写文章发布。我计划详细介绍一下我的老师们，因为他们有很多 *有趣的习惯* (/doge)。**这个介绍可能会在我高中毕业时完成。**
+但现在不同了。我想做一个博客来记录我的编程生活和高中生活。我会不时在这个博客上写文章发布。我计划详细介绍一下我的老师们，因为他们有很多 *有趣的习惯* ({{< qq-emoji "菜汪" >}})。**这个介绍可能会在我高中毕业时完成。**
 
 无论如何，我是一个中国学生，所以我尝试用中文和英文来写我的博客。但如果我只用中文或英文，请原谅我。**如果有语法错误，请写评论告诉我。**
 
 > 嗯，我不想为这段话写 *中文* 了，因为我得尽快去学习了 ... (っ °Д °;)っ
+> 26.2.12，我终于——让AI帮我翻译了！
 
 这就是全部了。谢谢阅读。
 
 # 示例 (测试)
-
-> 经过大量的努力，在密集的文档中，在混乱的目录结构中，没有任何注释，我设法修复了这个 bug。🥳
 
 ```cpp
 #include <iostream>
